@@ -1,4 +1,5 @@
 2.5.3 -> 2.5.4:
+	- add %license/%readme virtual file attributes
 	- align "Build Host:" with other fields
 
 2.5.2 -> 2.5.3:
